crates/biome_cli/tests/snapshots/main_cases_biome_json_support/always_disable_trailing_commas_biome_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write .
```

## `biome.json`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 4
  },
  "json": {
    "formatter": {
      "trailingCommas": "all"
    }
  }
}
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
