crates/biome_cli/tests/snapshots/main_cases_biome_json_support/biome_json_is_not_ignored.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci ./
```

## `biome.json`

```json
{
  "files": { "includes": ["**", "!*.json"] },
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

## `file.json`

```json
  statement(  )  
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
