crates/biome_cli/tests/snapshots/main_cases_biome_json_support/check_biome_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write fix.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "recommended",
      "suspicious": {
        "noDebugger": "off"
      }
    }
  }
}
```

## `fix.js`

```js
debugger;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
