crates/biome_cli/tests/snapshots/main_cases_biome_json_support/ci_biome_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci file.js
```

## `biome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
