crates/biome_cli/tests/snapshots/main_cases_biome_json_support/formatter_biome_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentSize": 6
  }
}
```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
biome.json:6:5 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The property indentSize is deprecated. Use formatter.indentWidth instead.
  
    4 │     "lineWidth": 160,
    5 │     "indentStyle": "space",
  > 6 │     "indentSize": 6
      │     ^^^^^^^^^^^^
    7 │   }
    8 │ }
  

```

```block
internalError/fs  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The argument --indent-size is deprecated, it will be removed in the next major release. Use --indent-width instead.
  

```

```block
Formatted 1 file in <TIME>. fixed file.
```


